fix small style bugs on mobile

--- a/src/main/resources/src/components/MainPage/Dispatcher/Rigging/RiggingComponents/TableView/TableView.scss
+++ b/src/main/resources/src/components/MainPage/Dispatcher/Rigging/RiggingComponents/TableView/TableView.scss
@@ -237,6 +237,7 @@
     }
 
     @media (max-width: 768px) {
+        min-width: 0;
         .main-window {
             &__list {
                 &-item {
