--- a/src/main/resources/src/components/MainPage/MainPage.scss
+++ b/src/main/resources/src/components/MainPage/MainPage.scss
@@ -15,7 +15,7 @@
       width: 100%;
       height: 100%;
       background-color: rgba(#000000, 0.3);
-      z-index: 999;
+      z-index: 98;
 
       &--hidden {
         transform: scale(0);
